Move static JVM options to jvm.options file
Patch by pmotta; reviewed by jmckenzie for CASSANDRA-10494